--- a/DsWorkAndroid/project.properties
+++ b/DsWorkAndroid/project.properties
@@ -12,5 +12,4 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=../../LibAndroid/ActionBarlibrary
-android.library.reference.2=../../LibAndroid/SlidingMenulibrary
+android.library.reference.1=../../DsWorkAndroidLib
