--- a/LibAndroid/DsWorkAndroidLib/project.properties
+++ b/LibAndroid/DsWorkAndroidLib/project.properties
@@ -13,5 +13,5 @@
 # Project target.
 target=android-19
 android.library=true
-android.library.reference.1=../LibAndroid/ActionBarlibrary
-android.library.reference.2=../LibAndroid/SlidingMenulibrary
+android.library.reference.1=../ActionBarlibrary
+android.library.reference.2=../SlidingMenulibrary
