--- a/DsWorkJava/.classpath
+++ b/DsWorkJava/.classpath
@@ -9,7 +9,6 @@
 	<classpathentry kind="src" path="dswork.spring"/>
 	<classpathentry kind="src" path="dswork.web"/>
 	<classpathentry kind="src" path="org.hibernate.dialect"/>
-	<classpathentry kind="con" path="melibrary.com.genuitec.eclipse.j2eedt.core.MYECLIPSE_JAVAEE_5_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="/Lib/commons/commons-fileupload-1.2.2.jar"/>
 	<classpathentry kind="lib" path="/Lib/commons/commons-collections-3.2.1.jar"/>
@@ -49,5 +48,7 @@
 	<classpathentry kind="lib" path="/Lib/spring/spring-tx.jar"/>
 	<classpathentry kind="lib" path="/Lib/spring/spring-web.jar"/>
 	<classpathentry kind="lib" path="/Lib/spring/spring-webmvc.jar"/>
+	<classpathentry kind="lib" path="lib/jsp-api.jar"/>
+	<classpathentry kind="lib" path="lib/servlet-api.jar"/>
 	<classpathentry kind="output" path="web/WEB-INF/classes"/>
 </classpath>
