--- a/LibAndroid/ActionBarlibrary/.classpath
+++ b/LibAndroid/ActionBarlibrary/.classpath
@@ -5,7 +5,6 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
-	<classpathentry kind="lib" path="D:/android/sdk/android-support-v4.jar"/>
-	<classpathentry kind="lib" path="D:/android/sdk/sdk/platforms/android-19/android.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Android"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
