--- a/DsCommon/.classpath
+++ b/DsCommon/.classpath
@@ -17,9 +17,10 @@
 	<classpathentry kind="lib" path="/Lib/commons/commons-io-2.3.jar"/>
 	<classpathentry kind="lib" path="/Lib/database/mysql/mysql-connector-java-5.1.15-bin.jar"/>
 	<classpathentry kind="lib" path="/Lib/dswork/dswork.core.jar"/>
+	<classpathentry kind="lib" path="/Lib/dswork/dswork.mvc.jar"/>
+	<classpathentry kind="lib" path="/Lib/dswork/dswork.ognl.jar"/>
 	<classpathentry kind="lib" path="/Lib/dswork/dswork.spring.jar"/>
 	<classpathentry kind="lib" path="/Lib/dswork/dswork.web.jar"/>
-	<classpathentry kind="lib" path="/Lib/dswork/dswork.ognl.jar"/>
 	<classpathentry kind="lib" path="/Lib/jar/aopalliance.jar"/>
 	<classpathentry kind="lib" path="/Lib/jar/cglib-nodep-2.2.jar"/>
 	<classpathentry kind="lib" path="/Lib/jar/dom4j-1.6.1.jar"/>
