--- a/LibAndroid/DsWorkAndroidLib/AndroidManifest.xml
+++ b/LibAndroid/DsWorkAndroidLib/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="dswork.android"
+    package="dswork.android.lib"
     android:versionCode="1"
     android:versionName="1.0" >
 
