--- a/DsWorkJava/.classpath
+++ b/DsWorkJava/.classpath
@@ -45,5 +45,6 @@
 	<classpathentry kind="lib" path="/Lib/module/xml/dom4j-1.6.1.jar"/>
 	<classpathentry kind="lib" path="/Lib/mybatis/mybatis-3.2.3.jar"/>
 	<classpathentry kind="lib" path="/Lib/mybatis/mybatis-spring-1.2.2.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JAVAEE"/>
 	<classpathentry kind="output" path="web/WEB-INF/classes"/>
 </classpath>
