--- a/DsCommon/.classpath
+++ b/DsCommon/.classpath
@@ -40,6 +40,10 @@
 	<classpathentry kind="lib" path="/Lib/common/ognl-2.7.3.jar"/>
 	<classpathentry kind="lib" path="/Lib/mybatis/mybatis-3.2.3.jar"/>
 	<classpathentry kind="lib" path="/Lib/mybatis/mybatis-spring-1.2.2.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JAVAWEB"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JAVAWEB">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="web/WEB-INF/classes"/>
 </classpath>
