--- a/DsWorkAndroid/AndroidManifest.xml
+++ b/DsWorkAndroid/AndroidManifest.xml
@@ -63,23 +63,23 @@
             android:parentActivityName=".IndexActivity" >
         </activity>
         <activity
-            android:name="dswork.android.demo.framework.app.single.PersonActivity"
+            android:name="dswork.android.demo.framework.app.single.PersonGet_A"
             android:label="@string/title_activity_person" >
         </activity>
         <activity
-            android:name="dswork.android.demo.framework.app.single.PersonAddActivity"
+            android:name="dswork.android.demo.framework.app.single.PersonAdd_A"
             android:label="@string/title_activity_person_add" >
         </activity>
         <activity
-            android:name="dswork.android.demo.framework.app.single.PersonUpdActivity"
+            android:name="dswork.android.demo.framework.app.single.PersonUpd_A"
             android:label="@string/title_activity_person_edit" >
         </activity>
         <activity
-            android:name="dswork.android.demo.framework.app.single.PersonDetailActivity"
+            android:name="dswork.android.demo.framework.app.single.PersonGetById_A"
             android:label="@string/title_activity_person_detail" >
         </activity>
         <activity
-            android:name="dswork.android.demo.framework.app.single.PersonSearchActivity"
+            android:name="dswork.android.demo.framework.app.single.PersonSearch_A"
             android:label="@string/title_activity_person_search" >
         </activity>
         <activity
@@ -92,28 +92,28 @@
         </activity>
         <!-- android:configChanges 防止横竖屏切换时重刷Activity -->
         <activity
-            android:name="dswork.android.demo.framework.app.web.MainA"
+            android:name="dswork.android.demo.framework.app.web.Main_A"
             android:label="@string/title_activity_demo_main"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:parentActivityName=".IndexActivity" >
         </activity>
         <activity
-            android:name="dswork.android.demo.framework.app.web.DemoAddA"
+            android:name="dswork.android.demo.framework.app.web.DemoAdd_A"
             android:label="@string/title_activity_demo_add"
             android:parentActivityName=".IndexActivity" >
         </activity>
         <activity
-            android:name="dswork.android.demo.framework.app.web.DemoUpdA"
+            android:name="dswork.android.demo.framework.app.web.DemoUpd_A"
             android:label="@string/title_activity_demo_upd"
             android:parentActivityName=".IndexActivity" >
         </activity>
         <activity
-            android:name="dswork.android.demo.framework.app.web.DemoGetByIdA"
+            android:name="dswork.android.demo.framework.app.web.DemoGetById_A"
             android:label="@string/title_activity_demo_detail"
             android:parentActivityName=".IndexActivity" >
         </activity>
         <activity
-            android:name="dswork.android.demo.framework.app.web.DemoSearchA"
+            android:name="dswork.android.demo.framework.app.web.DemoSearch_A"
             android:label="@string/title_activity_demo_search"
             android:parentActivityName=".IndexActivity" >
         </activity>
