--- a/DsCommon/.classpath
+++ b/DsCommon/.classpath
@@ -5,11 +5,11 @@
 	<classpathentry kind="src" path="common"/>
 	<classpathentry kind="src" path="config"/>
 	<classpathentry kind="src" path="dswork.common.dict"/>
+	<classpathentry kind="src" path="dswork.common.rbac"/>
 	<classpathentry kind="src" path="dswork.common.org"/>
 	<classpathentry kind="src" path="dswork.common.org.role"/>
-	<classpathentry kind="src" path="dswork.common.rbac"/>
 	<classpathentry kind="src" path="dswork.common.user"/>
-	<classpathentry kind="src" path="dswork.common.permit"/>
+	<classpathentry kind="src" path="dswork.common.user.org"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JAVAEE"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JAVAWEB">
 		<attributes>
