--- a/DsWorkAndroid/AndroidManifest.xml
+++ b/DsWorkAndroid/AndroidManifest.xml
@@ -27,10 +27,10 @@
         <activity
             android:name="dswork.android.IndexActivity"
             android:label="@string/app_name"
+            android:theme="@style/MyTheme"
             android:uiOptions="splitActionBarWhenNarrow" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
