--- a/DsWorkJava/.classpath
+++ b/DsWorkJava/.classpath
@@ -14,7 +14,11 @@
 	<classpathentry kind="src" path="dswork.web"/>
 	<classpathentry kind="src" path="log4jdbc"/>
 	<classpathentry kind="src" path="org.hibernate.dialect"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JAVAEE"/>
+		<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JAVAEE">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.nondependency" value=""/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="/Lib/database/sqlite/sqlite-jdbc-3.7.2.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
