--- a/DsCommon/web/WEB-INF/web.xml
+++ b/DsCommon/web/WEB-INF/web.xml
@@ -24,7 +24,7 @@
 	
 	<context-param>
 		<param-name>webAppRootKey</param-name>
-		<param-value>web.root.ds</param-value>
+		<param-value>web.root.dscommon</param-value>
 	</context-param>
 	<context-param>
 		<param-name>log4jConfigLocation</param-name>
