--- a/DsWorkAndroid/project.properties
+++ b/DsWorkAndroid/project.properties
@@ -12,4 +12,5 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=../../LibAndroid/DsWorkAndroidLib
+android.library.reference.1=..\\..\\Libs\\DsWorkAndroidLib
+android.library.reference.2=../../Libs/PullToRefreshlibrary
