--- a/LibAndroid/DsWorkAndroidLib/project.properties
+++ b/LibAndroid/DsWorkAndroidLib/project.properties
@@ -13,5 +13,6 @@
 # Project target.
 target=android-20
 android.library=true
-android.library.reference.1=../ActionBarlibrary
-android.library.reference.2=../SlidingMenulibrary
+android.library.reference.1=..\\ActionBarlibrary
+android.library.reference.2=..\\SlidingMenulibrary
+android.library.reference.3=../PullToRefreshlibrary
